# qsent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.langfuse.yml  index.html  login.html  news_comparison.html  pyproject.toml
.claude/agents/: code-builder.md  code-reviewer.md  test-runner.md
.github/workflows/: ci.yml
docs/decisions/: 001-protocol-based-provider-abstractions.md  002-newsapi-date-window.md  003-finbert-scoring-reliability.md  004-reddit-text-enrichment.md  005-company-name-search-query.md  006-observability-structlog-langfuse.md  007-google-sso-authentication.md
src/qsf/agents/: news_comparison.py  nodes.py  workflow.py
src/qsf/api/: auth.py  main.py
src/qsf/backtesting/: __init__.py  metrics.py  walk_forward.py
src/qsf/common/: logging.py  providers.py  utils.py
src/qsf/features/: __init__.py  engineering.py  preparation.py  targets.py
src/qsf/forecasting/: __init__.py  models.py  pipeline.py
src/qsf/ingestion/: __init__.py  market.py  news.py  news_alphavantage.py  news_marketaux.py  news_massive.py  social.py
src/qsf/nlp/: __init__.py  relevance.py  sentiment.py
tests/: test_analyze_endpoint.py
tests/e2e/: conftest.py  test_app_flow.py  test_login_page.py
tests/integration/: conftest.py  test_analyze_endpoint.py  test_auth_endpoints.py  test_news_comparison_endpoint.py  test_workflow.py
tests/unit/: test_auth.py  test_ingestion.py  test_news_providers_financial.py  test_nodes.py  test_observability.py  test_relevance.py  test_sentiment_logic.py
