[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qsf"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "yfinance>=0.2",
    "newsapi-python>=0.2.7",
    "praw>=7.7",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
    "openai>=1.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-mock>=3.14",
]
forecasting-extra = [
    "xgboost>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
