[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qsf"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "yfinance>=0.2",
    "newsapi-python>=0.2.7",
    "praw>=7.7",
    "pandas>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
    "openai>=1.0",
    "httpx>=0.27",
    "authlib>=1.3",
    "python-jose[cryptography]>=3.3",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "structlog>=24.0",
    "langfuse>=2.0,<3.0",
]

[project.optional-dependencies]
forecasting-extra = [
    "xgboost>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "playwright>=1.44",
    "pytest-playwright>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
